Added the project-detail CSS file to the list of used style sheets

--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
 		<link rel="stylesheet" type="text/css" href="style.css">
 		<link rel="stylesheet" type="text/css" href="home.css">
 		<link rel="stylesheet" type="text/css" href="projects.css">
+		<link rel="stylesheet" type="text/css" href="project-detail.css">
 		<link rel="stylesheet" type="text/css" href="photography.css">
 		<link rel="stylesheet" type="text/css" href="photography-gallery.css">
 		<link rel="stylesheet" type="text/css" href="aboutme.css">
