Renamed the functions in the common JS to a name that starts with com_
This makes it easier to identify the use of common functions in other JS files.

--- a/index.html
+++ b/index.html
@@ -22,12 +22,12 @@
 			
 			<div class="menu">
 				<div class="menuItems">
-					<span class="menuItem" id="lang_menuHome" onClick="changePage('home')">Home</span>
-					<span class="menuItem" id="lang_menuProjects" onClick="changePage('projects')">Projecten</span>
-					<span class="menuItem" id="lang_menuPhotography" onClick="changePage('photography')">Fotografie</span>
-					<span class="menuItem" id="lang_menuGallery" onClick="changePage('gallery')">Afbeeldingen Galerij</span>
-					<span class="menuItem" id="lang_menuTi" onClick="changePage('ti')">Technische Informatica</span>
-					<span class="menuItem" id="lang_menuAboutme" onClick="changePage('aboutme')">Persoonlijk</span>
+					<span class="menuItem" id="lang_menuHome" onClick="com_changePage('home')">Home</span>
+					<span class="menuItem" id="lang_menuProjects" onClick="com_changePage('projects')">Projecten</span>
+					<span class="menuItem" id="lang_menuPhotography" onClick="com_changePage('photography')">Fotografie</span>
+					<span class="menuItem" id="lang_menuGallery" onClick="com_changePage('gallery')">Afbeeldingen Galerij</span>
+					<span class="menuItem" id="lang_menuTi" onClick="com_changePage('ti')">Technische Informatica</span>
+					<span class="menuItem" id="lang_menuAboutme" onClick="com_changePage('aboutme')">Persoonlijk</span>
 				</div>
 				
 				<div class="menuFlags">
