--- a/home.html
+++ b/home.html
@@ -1,7 +1,7 @@
 <div class="home-container">
 	<p id="lang_pageDescription">Welkom op deze website. Mijn naam is Arthur van Strien en op deze website is een kijk op mijn projecten te vinden.</p>
 					
-	<span onClick="com_changePage('projects')" class="homeMenu-container">
+	<span onClick="changePage('projects')" class="homeMenu-container">
 		<h2 id="lang_menuProjects">Projecten</h2>
 		<img id="margin" src="pic_home/project_menu_1.jpeg" alt="Projecten Pagina">
 		<img id="margin" src="pic_home/project_menu_2.jpeg" alt="Projecten Pagina">
@@ -9,7 +9,7 @@
 		<img src="pic_home/project_menu_4.jpeg" alt="Projecten Pagina">
 	</span>
 
-	<span onClick="com_changePage('photography')" class="homeMenu-container">
+	<span onClick="changePage('photography')" class="homeMenu-container">
 		<h2 id="lang_menuPhotography">Fotografie</h2>
 		<img id="margin" src="pic_home/IMGP0165.jpg" alt="Fotografie">
 		<img id="margin" src="pic_home/P1750035.jpg" alt="Fotografie">
@@ -17,7 +17,7 @@
 		<img src="pic_home/IMGP9907.jpg" alt="Fotografie">
 	</span>
 
-	<span onClick="com_changePage('aboutme')" class="homeMenu-container">
+	<span onClick="changePage('aboutme')" class="homeMenu-container">
 		<h2 id="lang_menuAboutme">Persoonlijk</h2>
 		<img id="margin" src="pic_home/aboutme_menu_1.jpeg" alt="Over Mij">
 		<img id="margin" src="pic_home/aboutme_menu_2.jpeg" alt="Over Mij">
