Refactored the common JS. It now has public and private methods

--- a/aboutme.html
+++ b/aboutme.html
@@ -5,5 +5,5 @@
 	<p id="lang_paragraph-1"></p>
 	<p id="lang_paragraph-2"></p>
 	
-	<span id="homeButton" onClick="changePage('home')">Home</span>
+	<span id="homeButton" onClick="common.changePage('home')">Home</span>
 </p>
