--- a/index.html
+++ b/index.html
@@ -22,17 +22,17 @@
 			
 			<div class="menu">
 				<div class="menuItems">
-					<span class="menuItem" id="lang_menuHome" onClick="changePage('home')">Home</span>
-					<span class="menuItem" id="lang_menuProjects" onClick="changePage('projects')">Projecten</span>
-					<span class="menuItem" id="lang_menuPhotography" onClick="changePage('photography')">Fotografie</span>
-					<span class="menuItem" id="lang_menuGallery" onClick="changePage('gallery')">Afbeeldingen Galerij</span>
-					<span class="menuItem" id="lang_menuTi" onClick="changePage('ti')">Technische Informatica</span>
-					<span class="menuItem" id="lang_menuAboutme" onClick="changePage('aboutme')">Persoonlijk</span>
+					<span class="menuItem" id="lang_menuHome" onClick="common.changePage('home')">Home</span>
+					<span class="menuItem" id="lang_menuProjects" onClick="common.changePage('projects')">Projecten</span>
+					<span class="menuItem" id="lang_menuPhotography" onClick="common.changePage('photography')">Fotografie</span>
+					<span class="menuItem" id="lang_menuGallery" onClick="common.changePage('gallery')">Afbeeldingen Galerij</span>
+					<span class="menuItem" id="lang_menuTi" onClick="common.changePage('ti')">Technische Informatica</span>
+					<span class="menuItem" id="lang_menuAboutme" onClick="common.changePage('aboutme')">Persoonlijk</span>
 				</div>
 				
 				<div class="menuFlags">
-					<span class="menuFlag" onclick="changeLanguage('en')"><img src="pic_common/british.jpg" alt="English"></span>
-					<span class="menuFlag" onclick="changeLanguage('nl')"><img src="pic_common/dutch.jpg" alt="Dutch"></span>
+					<span class="menuFlag" onclick="common.changeLanguage('en')"><img src="pic_common/british.jpg" alt="English"></span>
+					<span class="menuFlag" onclick="common.changeLanguage('nl')"><img src="pic_common/dutch.jpg" alt="Dutch"></span>
 				</div>
 			</div>
 		
