Cleaned the code of the index.html file.

--- a/index.html
+++ b/index.html
@@ -10,10 +10,12 @@
 		<link rel="stylesheet" type="text/css" href="photography-gallery.css">
 		<link rel="stylesheet" type="text/css" href="aboutme.css">
 		<link rel="stylesheet" type="text/css" href="gallery.css">
+		
 		<script type="text/javascript" src="jquery-3.4.1.min.js"></script>
 		<script type="text/javascript" src="common.js"></script>
 		<script type="text/javascript" src="projects.js"></script>
 		<script type="text/javascript" src="project-detail.js"></script>
+		
 		<title>Home</title>
 	</head>
 	
@@ -36,7 +38,7 @@
 				</div>
 			</div>
 		
-			<h1 id="lang_pageTitle">Home</h1>
+			<h1 id="lang_pageTitle">Title</h1>
 			
 			<div class="content" id="content">
 				<p>Gelieve javascript in uw browser aan te zetten om gebruik te kunnen maken van deze website.</p>
