Refactored the gallery page to load content in the new way.

--- a/gallery.html
+++ b/gallery.html
@@ -1,66 +1,5 @@
 <div class="gallery-container">
 	<img class="banner" src="pic_gallery/P1750382-Pano.jpg" >
-
-	<p id="lang_paragraph-1">Door de jaren heen heb ik veel foto's gemaakt. Sommigen zijn gelukt, anderen helaas niet. Op deze pagina heb ik een aantal foto's geplaatst die ik zelf het mooist vind.</p>
 	
-	<img class="gallery-pictureHalfLeft" src="pic_gallery/DSCF1721.jpg">
-	<img class="gallery-pictureHalfRight" src="pic_gallery/DSCF1529.jpg">
-	<img class="gallery-pictureHalfLeft" src="pic_gallery/DSCF4600.jpg">
-	<img class="gallery-pictureHalfRight" src="pic_gallery/DSCF4444.jpg">
-	<img class="gallery-pictureHalfLeft" src="pic_gallery/DSCF6292.jpg">
-	<img class="gallery-pictureHalfRight" src="pic_gallery/DSCF3123.jpg">
-
-	<img class="gallery-pictureWide" src="pic_gallery/DSCF7143.jpg">
-	
-	<img class="gallery-pictureHalfLeft" src="pic_gallery/DSCF3778.jpg">
-	<img class="gallery-pictureHalfRight" src="pic_gallery/DSCF5996.jpg">
-	<img class="gallery-pictureHalfLeft" src="pic_gallery/DSCF2388.jpg">
-	<img class="gallery-pictureHalfRight" src="pic_gallery/DSCF7964.jpg">
-	<img class="gallery-pictureHalfLeft" src="pic_gallery/DSCF8274.jpg">
-	<img class="gallery-pictureHalfRight" src="pic_gallery/DSCF7973.jpg">
-	
-	<img class="gallery-pictureWide" src="pic_gallery/DSCF7503.jpg">
-	
-	<img class="gallery-pictureHalfLeft" src="pic_gallery/P1860582.jpg">
-	<img class="gallery-pictureHalfRight" src="pic_gallery/P1740443.jpg">
-	<img class="gallery-pictureHalfLeft" src="pic_gallery/P1500065.jpg">
-	<img class="gallery-pictureHalfRight" src="pic_gallery/P1490867.jpg">
-	<img class="gallery-pictureHalfLeft" src="pic_gallery/P1010818.jpg">
-	<img class="gallery-pictureHalfRight" src="pic_gallery/P1490857.jpg">
-	
-	<img class="gallery-pictureWide" src="pic_gallery/P1790784-Pano.jpg">
-	
-	<img class="gallery-pictureHalfLeft" src="pic_gallery/DSCF1801.jpg">
-	<img class="gallery-pictureHalfRight" src="pic_gallery/DSCF2435.jpg">
-	<img class="gallery-pictureHalfLeft" src="pic_gallery/DSCF5605.jpg">
-	<img class="gallery-pictureHalfRight" src="pic_gallery/DSCF6647.jpg">
-	<img class="gallery-pictureHalfLeft" src="pic_gallery/P1010815.jpg">
-	<img class="gallery-pictureHalfRight" src="pic_gallery/P1000595.jpg">
-	
-	<img class="gallery-pictureWide" src="pic_gallery/P1870037-Pano.jpg">
-	
-	<img class="gallery-pictureHalfLeft" src="pic_gallery/DSCF7691.jpg">
-	<img class="gallery-pictureHalfRight" src="pic_gallery/P1420466.jpg">
-	<img class="gallery-pictureHalfLeft" src="pic_gallery/P1420181.jpg">
-	<img class="gallery-pictureHalfRight" src="pic_gallery/P1420042.jpg">
-	<img class="gallery-pictureHalfLeft" src="pic_gallery/P1010514.jpg">
-	<img class="gallery-pictureHalfRight" src="pic_gallery/P1000277.jpg">
-	
-	<img class="gallery-pictureWide" src="pic_gallery/P1750517-Pano.jpg">
-	
-	<img class="gallery-pictureHalfLeft" src="pic_gallery/DSCF8994.jpg">
-	<img class="gallery-pictureHalfRight" src="pic_gallery/DSCF7971.jpg">
-	<img class="gallery-pictureHalfLeft" src="pic_gallery/P1000254.jpg">
-	<img class="gallery-pictureHalfRight" src="pic_gallery/P1010452.jpg">
-	<img class="gallery-pictureHalfLeft" src="pic_gallery/P1500464.jpg">
-	<img class="gallery-pictureHalfRight" src="pic_gallery/P1730881.jpg">
-	
-	<img class="gallery-pictureWide" src="pic_gallery/P1790600-Pano.jpg">
-	
-	<img class="gallery-pictureHalfLeft" src="pic_gallery/P1740019.jpg">
-	<img class="gallery-pictureHalfRight" src="pic_gallery/P1740523.jpg">
-	<img class="gallery-pictureHalfLeft" src="pic_gallery/P1420781.jpg">
-	<img class="gallery-pictureHalfRight" src="pic_gallery/P1700017.jpg">
-	<img class="gallery-pictureHalfLeft" src="pic_gallery/P1740899.jpg">
-	<img class="gallery-pictureHalfRight" src="pic_gallery/P1870118.jpg">
+	<span id="gallery-anchor"></span>
 </div>
