Renamed the project-detail page to projectDetail. JS does not like the -

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 		<link rel="stylesheet" type="text/css" href="style.css">
 		<link rel="stylesheet" type="text/css" href="home.css">
 		<link rel="stylesheet" type="text/css" href="projects.css">
-		<link rel="stylesheet" type="text/css" href="project-detail.css">
+		<link rel="stylesheet" type="text/css" href="projectDetail.css">
 		<link rel="stylesheet" type="text/css" href="photography.css">
 		<link rel="stylesheet" type="text/css" href="photography-gallery.css">
 		<link rel="stylesheet" type="text/css" href="aboutme.css">
@@ -15,7 +15,7 @@
 		<script type="text/javascript" src="jquery-3.4.1.min.js"></script>
 		<script type="text/javascript" src="common.js"></script>
 		<script type="text/javascript" src="projects.js"></script>
-		<script type="text/javascript" src="project-detail.js"></script>
+		<script type="text/javascript" src="projectDetail.js"></script>
 		
 		<title>Home</title>
 	</head>
