--- a/projectDetail.html
+++ b/projectDetail.html
@@ -5,7 +5,7 @@
 	<p class="projectDetail-th"><span id="lang_projectsSpecs-type">Type: </span><span id="projectDetail-type"></span></p>
 	<p class="projectDetail-th"><span id="lang_projectsMenu-programming-languages">Programming Languages: </span><span id="projectDetail-programming-languages"></span></p>
 	<p class="projectDetail-th"><span id="lang_projectsMenu-used-tools">Used tools: </span><span id="projectDetail-used-tools"></span></p>
-	<p class="projectDetail-th"><span id="lang_projectsMenu-school-boolean">School project: </span><span id="projectDetail-school-boolean"></span></p>
+	<p class="projectDetail-th"><span id="lang_projectsMenu-motive">Why the project was made: </span><span id="projectDetail-school-boolean"></span></p>
 	<p class="projectDetail-th"><span id="lang_projectsMenu-version-control">Version control: </span><span id="projectDetail-version-control"></span></p>
 	<p class="projectDetail-th"><span id="lang_projectsMenu-process-framework">Process framework: </span><span id="projectDetail-process-framework"></span></p>
 	<p class="projectDetail-th"><span id="lang_projectsMenu-built-by">Project built by: </span><span id="projectDetail-built-by"></span></p>
