Renamed project type to project category.

--- a/projectDetail.html
+++ b/projectDetail.html
@@ -2,7 +2,7 @@
 	
 	<h2 id="lang_project-title"></h2>
 	<p class="projectDetail-th"><span id="lang_projectsSpecs-year">Year: </span><span id="projectDetail-year"></span></p>
-	<p class="projectDetail-th"><span id="lang_projectsSpecs-type">Type: </span><span id="projectDetail-type"></span></p>
+	<p class="projectDetail-th"><span id="lang_projectsSpecs-category">Type: </span><span id="projectDetail-category"></span></p>
 	<p class="projectDetail-th"><span id="lang_projectsMenu-programming-languages">Programming Languages: </span><span id="projectDetail-programming-languages"></span></p>
 	<p class="projectDetail-th"><span id="lang_projectsMenu-used-tools">Used tools: </span><span id="projectDetail-used-tools"></span></p>
 	<p class="projectDetail-th"><span id="lang_projectsMenu-motive">Why the project was made: </span><span id="projectDetail-school-boolean"></span></p>
