Undid earlier refactor: had a brainfart

--- a/projectDetail.html
+++ b/projectDetail.html
@@ -1,14 +1,14 @@
 <div class="projectDetail-container">
 	
 	<h2 id="lang_project-title"></h2>
-	<span class="projectDetail-th"><span class="projectDetail-td" id="lang_projectsSpecs-year">Year: </span><span id="projectDetail-year"></span></span>
-	<span class="projectDetail-th"><span class="projectDetail-td" id="lang_projectsSpecs-category">Type: </span><span id="projectDetail-category"></span></span>
-	<span class="projectDetail-th"><span class="projectDetail-td" id="lang_projectsSpecs-programming-languages">Programming Languages: </span><span id="projectDetail-programming-languages"></span></span>
-	<span class="projectDetail-th"><span class="projectDetail-td" id="lang_projectsSpecs-used-tools">Used tools: </span><span id="projectDetail-used-tools"></span></span>
-	<span class="projectDetail-th"><span class="projectDetail-td" id="lang_projectsSpecs-motive">Why the project was made: </span><span id="projectDetail-school-boolean"></span></span>
-	<span class="projectDetail-th"><span class="projectDetail-td" id="lang_projectsSpecs-version-control">Version control: </span><span id="projectDetail-version-control"></span></span>
-	<span class="projectDetail-th"><span class="projectDetail-td" id="lang_projectsSpecs-process-framework">Process framework: </span><span id="projectDetail-process-framework"></span></span>
-	<span class="projectDetail-th"><span class="projectDetail-td" id="lang_projectsSpecs-built-by">Project built by: </span><span id="projectDetail-built-by"></span></span>
+	<span class="projectDetail-th"><span class="projectDetail-td" id="lang_projectsMenu-year">Year: </span><span id="projectDetail-year"></span></span>
+	<span class="projectDetail-th"><span class="projectDetail-td" id="lang_projectsMenu-category">Type: </span><span id="projectDetail-category"></span></span>
+	<span class="projectDetail-th"><span class="projectDetail-td" id="lang_projectsMenu-programming-languages">Programming Languages: </span><span id="projectDetail-programming-languages"></span></span>
+	<span class="projectDetail-th"><span class="projectDetail-td" id="lang_projectsMenu-used-tools">Used tools: </span><span id="projectDetail-used-tools"></span></span>
+	<span class="projectDetail-th"><span class="projectDetail-td" id="lang_projectsMenu-motive">Why the project was made: </span><span id="projectDetail-school-boolean"></span></span>
+	<span class="projectDetail-th"><span class="projectDetail-td" id="lang_projectsMenu-version-control">Version control: </span><span id="projectDetail-version-control"></span></span>
+	<span class="projectDetail-th"><span class="projectDetail-td" id="lang_projectsMenu-process-framework">Process framework: </span><span id="projectDetail-process-framework"></span></span>
+	<span class="projectDetail-th"><span class="projectDetail-td" id="lang_projectsMenu-built-by">Project built by: </span><span id="projectDetail-built-by"></span></span>
 	
 	<span id="project-text-anker"></span>
 
