Styled the project detail overview and added a header.

--- a/projectDetail.html
+++ b/projectDetail.html
@@ -1,6 +1,6 @@
 <div class="projectDetail-container">
 	
-	<h2 id="lang_project-title"></h2>
+	<h3 class="projectDetail-overview" id="lang_projectsMenu-overview">Overzicht</h3>
 	<span class="projectDetail-th"><span class="projectDetail-td" id="lang_projectsMenu-year">Year: </span><span id="projectDetail-year"></span></span>
 	<span class="projectDetail-th"><span class="projectDetail-td" id="lang_projectsMenu-category">Type: </span><span id="projectDetail-category"></span></span>
 	<span class="projectDetail-th"><span class="projectDetail-td" id="lang_projectsMenu-programming-languages">Programming Languages: </span><span id="projectDetail-programming-languages"></span></span>
