Changed the class of an element for different styling

--- a/projectDetail.html
+++ b/projectDetail.html
@@ -8,8 +8,9 @@
 	<span class="projectDetail-th"><span class="projectDetail-td" id="lang_projectsMenu-motive">Why the project was made: </span><span id="projectDetail-motive"></span></span>
 	<span class="projectDetail-th"><span class="projectDetail-td" id="lang_projectsMenu-version-control">Version control: </span><span id="projectDetail-version-control"></span></span>
 	<span class="projectDetail-th"><span class="projectDetail-td" id="lang_projectsMenu-process-framework">Process framework: </span><span id="projectDetail-process-framework"></span></span>
-	<span class="projectDetail-th"><span class="projectDetail-td" id="lang_projectsMenu-built-by">Project built by: </span><span id="projectDetail-built-by"></span></span>
+	<span class="projectDetail-th"><span class="projectDetail-td-last" id="lang_projectsMenu-built-by">Project built by: </span><span id="projectDetail-built-by"></span></span>
 	
 	<span id="project-text-anker"></span>
-
+	
+	<span id="project-text-bottom"></span>
 </div>
