--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
 	<head>
 		<meta charset="UTF-8">
 		<link rel="stylesheet" type="text/css" href="style.css">
+		<link rel="stylesheet" type="text/css" href="shared-content.css">
 		<link rel="stylesheet" type="text/css" href="home.css">
 		<link rel="stylesheet" type="text/css" href="projects.css">
 		<link rel="stylesheet" type="text/css" href="projectDetail.css">
