Refactored the TI page to engineer-tech

--- a/index.html
+++ b/index.html
@@ -12,11 +12,13 @@
 		<link rel="stylesheet" type="text/css" href="photography-gallery.css">
 		<link rel="stylesheet" type="text/css" href="aboutme.css">
 		<link rel="stylesheet" type="text/css" href="gallery.css">
+		<link rel="stylesheet" type="text/css" href="engineer-tech.css">
 		
 		<script type="text/javascript" src="jquery-3.4.1.min.js"></script>
 		<script type="text/javascript" src="common.js"></script>
 		<script type="text/javascript" src="projects.js"></script>
 		<script type="text/javascript" src="projectDetail.js"></script>
+		<script type="text/javascript" src="engineer-tech.js"></script>
 		
 		<title>Home</title>
 	</head>
@@ -30,7 +32,7 @@
 					<span class="menuItem" id="lang_menuProjects" onClick="common.changePage('projects')">Projecten</span>
 					<span class="menuItem" id="lang_menuPhotography" onClick="common.changePage('photography')">Fotografie</span>
 					<span class="menuItem" id="lang_menuGallery" onClick="common.changePage('gallery')">Afbeeldingen Galerij</span>
-					<span class="menuItem" id="lang_menuTi" onClick="common.changePage('ti')">Technische Informatica</span>
+					<span class="menuItem" id="lang_menuEngineerTech" onClick="common.changePage('engineer-tech')">Techniek en Informatica</span>
 					<span class="menuItem" id="lang_menuAboutme" onClick="common.changePage('aboutme')">Persoonlijk</span>
 				</div>
 				
