--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
 		<link rel="stylesheet" type="text/css" href="aboutme.css">
 		<link rel="stylesheet" type="text/css" href="gallery.css">
 		<link rel="stylesheet" type="text/css" href="engineer-tech.css">
+		<link rel="stylesheet" type="text/css" href="404.css">
 		
 		<script type="text/javascript" src="jquery-3.4.1.min.js"></script>
 		<script type="text/javascript" src="common.js"></script>
