--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
 		</div>
 
 		<div class="footer">
-			<span id="lang_footer">Gemaakt door Arthur van Strien</span><span>, </span><span id="year_footer">2019</span>
+			<span id="lang_footer">arthurvanstrien.nl versie 1, door Arthur van Strien</span><span>, </span><span id="year_footer">2019</span>
 		</div>
 	</body>
 </html>
