--- a/photography.html
+++ b/photography.html
@@ -2,6 +2,9 @@
 	
 	<img class="banner" src="pic_photography/top-banner.jpg" alt="Waal Panorama Tiel" title="Waal Panorama Tiel">
 	
+	<span id="photography-anchor"></span>
+	
+	<!--
 	<p id="lang_main-paragraph-1"></p>
 
 
@@ -20,8 +23,10 @@
 	<p id="lang_timelapse-paragraph-2"></p>
 	<p id="lang_timelapse-paragraph-3"></p>
 	<span class="photography-positionCorrection"><span id="lang_timelapse-paragraph-4"></span><a id="photography-youtubeLink" target="_blank" href="https://www.youtube.com/user/arthurvanstrien/videos">Youtube</a>:</span>
+	-->
 	
 	<!--Youtube video from the timelapse from the mosel-->
+	<!--
 	<iframe id="photography-youtubeVideo" width="560" height="315" src="https://www.youtube-nocookie.com/embed/92P-BQc-V2M?controls=0" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
 
 
@@ -47,6 +52,7 @@
 
 	<h3 id="lang_title-conclusion">Conclusie</h3>
 	<p id="lang_conclusion-paragraph-1"></p>
+	-->
 	
 	
 	<h2 id="lang_title-gallery">Beeldengalerij</h2>
