Added an overflowstop on every page.
This prevents floating elements to flow over or below the footer.

--- a/gallery.html
+++ b/gallery.html
@@ -2,4 +2,6 @@
 	<img class="banner" src="pic_gallery/P1750382-Pano.jpg" >
 	
 	<span id="gallery-anchor"></span>
+	
+	<span class="contentOverflowStop"></span>
 </div>
