--- a/home.html
+++ b/home.html
@@ -24,4 +24,8 @@
 		<img id="margin" src="pic_home/aboutme_menu_3.jpeg" alt="Over Mij">
 		<img src="pic_home/aboutme_menu_4.jpeg" alt="Over Mij">
 	</span>
+	
+	<span id="home-anchor"></span>
+	
+	<span class="contentOverflowStop"></span>
 </div>
