--- a/photography.html
+++ b/photography.html
@@ -4,7 +4,7 @@
 	
 	<span id="photography-anchor"></span>
 	
-	<!--
+	<span class="contentOverflowStop"></span>
 	<p id="lang_main-paragraph-1"></p>
 
 
