--- a/projectDetail.html
+++ b/projectDetail.html
@@ -13,4 +13,6 @@
 	<span id="project-text-anker"></span>
 	
 	<span id="project-text-bottom"></span>
+	
+	<span class="contentOverflowStop"></span>
 </div>
