--- a/projects.html
+++ b/projects.html
@@ -4,6 +4,8 @@
 	<p class="projects-paragraph" id="lang_paragraph-2"></p>
 	
 	<span id="projects-list-anker"></span>
+	
+	<span class="contentOverflowStop"></span>
 
 	<span id="homeButton" onClick="changePage('home')">Home</span>
 </div>
