--- a/photography.html
+++ b/photography.html
@@ -6,7 +6,7 @@
 	
 	<span class="contentOverflowStop"></span>
 	
-	<h2 id="lang_title-gallery">Beeldengalerij</h2>
+	<h2 id="lang_title-gallery" class="shared-content-h2">Beeldengalerij</h2>
 	
 	<span id="photography-galleryButton" onClick="common.changePage('gallery')">Gallery</span>
 
