--- a/projectDetail.html
+++ b/projectDetail.html
@@ -2,6 +2,7 @@
 	
 	<h3 class="projectDetail-overview" id="lang_projectsMenu-overview">Overzicht</h3>
 	<span class="projectDetail-th"><span class="projectDetail-td" id="lang_projectsMenu-year">Year: </span><span id="projectDetail-year"></span></span>
+	<span class="projectDetail-th"><span class="projectDetail-td" id="lang_projectsMenu-version">Version: </span><span id="projectDetail-version"></span></span>
 	<span class="projectDetail-th"><span class="projectDetail-td" id="lang_projectsMenu-category">Type: </span><span id="projectDetail-category"></span></span>
 	<span class="projectDetail-th"><span class="projectDetail-td" id="lang_projectsMenu-programming-languages">Programming Languages: </span><span id="projectDetail-programming-languages"></span></span>
 	<span class="projectDetail-th"><span class="projectDetail-td" id="lang_projectsMenu-used-tools">Used tools: </span><span id="projectDetail-used-tools"></span></span>
