Fixed a visual glitch on the about me page.

--- a/aboutme.html
+++ b/aboutme.html
@@ -2,7 +2,7 @@
 
 	<img class="banner" src="pic_aboutme/P1790805-Pano.jpg" >
 	
-	<span id="aboutme-anchor"></span>
+	<span id="aboutme-anchor" class="aboutme-anchor"></span>
 	
 	<span class="contentOverflowStop"></span>
 	
