--- a/projectDetail.html
+++ b/projectDetail.html
@@ -6,6 +6,7 @@
 	<span class="projectDetail-th"><span class="projectDetail-td" id="lang_projectsMenu-category">Type: </span><span id="projectDetail-category"></span></span>
 	<span class="projectDetail-th"><span class="projectDetail-td" id="lang_projectsMenu-programming-languages">Programming Languages: </span><span id="projectDetail-programming-languages"></span></span>
 	<span class="projectDetail-th"><span class="projectDetail-td" id="lang_projectsMenu-used-tools">Used tools: </span><span id="projectDetail-used-tools"></span></span>
+	<span class="projectDetail-th"><span class="projectDetail-td" id="lang_projectsMenu-used-materials">Used materials: </span><span id="projectDetail-used-materials"></span></span>
 	<span class="projectDetail-th"><span class="projectDetail-td" id="lang_projectsMenu-motive">Why the project was made: </span><span id="projectDetail-motive"></span></span>
 	<span class="projectDetail-th"><span class="projectDetail-td" id="lang_projectsMenu-version-control">Version control: </span><span id="projectDetail-version-control"></span></span>
 	<span class="projectDetail-th"><span class="projectDetail-td" id="lang_projectsMenu-process-framework">Process framework: </span><span id="projectDetail-process-framework"></span></span>
