--- a/404.html
+++ b/404.html
@@ -1,5 +1,7 @@
 <div class="four-o-four_container">
 	
+	<h2 id="lang_header-1"></h2>
+	
 	<p id="lang_paragraph-1"></p>
 	
 	<span id="homeButton" onClick="common.changePage('home')">Home</span>
