--- a/home.html
+++ b/home.html
@@ -2,13 +2,13 @@
 	<p id="lang_pageDescription">Welkom op deze website. Mijn naam is Arthur van Strien en op deze website is een kijk op mijn projecten te vinden.</p>
 					
 	<span onClick="common.changePage('projects')" class="homeMenu-container">
-		<h2 id="lang_menuProjects">Projecten</h2>
+		<h2 id="lang_homeMenuProjects">Projecten</h2>
 		<img id="margin" src="pic_home/projects_arthurvanstrienpuntnl.png" alt="Projecten Pagina">
 		<img src="pic_home/projects_P1890540.jpg" alt="Projecten Pagina">
 	</span>
 
 	<span onClick="common.changePage('photography')" class="homeMenu-container">
-		<h2 id="lang_menuPhotography">Fotografie</h2>
+		<h2 id="lang_homeMenuPhotography">Fotografie</h2>
 		<img id="margin" src="pic_home/photography_IMGP0165.jpg" alt="Fotografie">
 		<img id="margin" src="pic_home/photography_P1750035.jpg" alt="Fotografie">
 		<img id="margin" src="pic_home/photography_IMGP9831.jpg" alt="Fotografie">
@@ -16,7 +16,7 @@
 	</span>
 
 	<span onClick="common.changePage('aboutme')" class="homeMenu-container">
-		<h2 id="lang_menuAboutme">Persoonlijk</h2>
+		<h2 id="lang_homeMenuAboutme">Persoonlijk</h2>
 		<img src="pic_home/aboutme_P1870745.jpg" alt="Over Mij">
 	</span>
 	
