Renamed the Engineer-Tech files. They are now loaded correctly.

--- a/index.html
+++ b/index.html
@@ -11,14 +11,14 @@
 		<link rel="stylesheet" type="text/css" href="photography.css">
 		<link rel="stylesheet" type="text/css" href="aboutme.css">
 		<link rel="stylesheet" type="text/css" href="gallery.css">
-		<link rel="stylesheet" type="text/css" href="engineer-tech.css">
+		<link rel="stylesheet" type="text/css" href="engineerTech.css">
 		<link rel="stylesheet" type="text/css" href="404.css">
 		
 		<script type="text/javascript" src="jquery-3.4.1.min.js"></script>
 		<script type="text/javascript" src="common.js"></script>
 		<script type="text/javascript" src="projects.js"></script>
 		<script type="text/javascript" src="projectDetail.js"></script>
-		<script type="text/javascript" src="engineer-tech.js"></script>
+		<script type="text/javascript" src="engineerTech.js"></script>
 		
 		<title>Home</title>
 	</head>
@@ -32,7 +32,7 @@
 					<span class="menuItem" id="lang_menuProjects" onClick="common.changePage('projects')">Projecten</span>
 					<span class="menuItem" id="lang_menuPhotography" onClick="common.changePage('photography')">Fotografie</span>
 					<span class="menuItem" id="lang_menuGallery" onClick="common.changePage('gallery')">Afbeeldingen Galerij</span>
-					<span class="menuItem" id="lang_menuEngineerTech" onClick="common.changePage('engineer-tech')">Techniek en Informatica</span>
+					<span class="menuItem" id="lang_menuEngineerTech" onClick="common.changePage('engineerTech')">Techniek en Informatica</span>
 					<span class="menuItem" id="lang_menuAboutme" onClick="common.changePage('aboutme')">Persoonlijk</span>
 				</div>
 				
