Refactored the buttons on the website for more universal usage.

--- a/aboutme.html
+++ b/aboutme.html
@@ -5,6 +5,7 @@
 	<span id="aboutme-anchor" class="aboutme-anchor"></span>
 	
 	<span class="contentOverflowStop"></span>
-	
-	<span id="homeButton" onClick="common.changePage('home')">Home</span>
-</div>
+
+	<div class="bottomButton-container">
+		<span class="button" onClick="common.changePage('home')">Home</span>
+	</div>
