--- a/photography.html
+++ b/photography.html
@@ -8,10 +8,10 @@
 	
 	<h2 id="lang_title-gallery" class="shared-content-h2">Beeldengalerij</h2>
 	
-	<span id="photography-galleryButton" onClick="common.changePage('gallery')">Gallery</span>
+	<span id="lang_galleryButton" class="button" onClick="common.changePage('gallery')">Gallery</span>
 
-	<div id="homeButton-container">
-		<span id="homeButton" onClick="common.changePage('home')">Home</span>
+	<div class="bottomButton-container">
+		<span class="button" onClick="common.changePage('home')">Home</span>
 	</div>
 
 </div>
