--- a/projects.html
+++ b/projects.html
@@ -6,5 +6,7 @@
 	
 	<span class="contentOverflowStop"></span>
 
-	<span id="homeButton" onClick="changePage('home')">Home</span>
+	<div class="bottomButton-container">
+		<span class="button" onClick="changePage('home')">Home</span>
+	</div>
 </div>
