--- a/engineerTech.html
+++ b/engineerTech.html
@@ -1,4 +1,8 @@
 <div class="engineer-tech-container">
+
+	<p id="lang_paragraph"></p>
+	
+	<h1 id="lang_header" class="engineer-tech-header"></h1>
 	
 	<span id="engineer-tech-anchor"></span>
 	
