--- a/index.html
+++ b/index.html
@@ -13,12 +13,7 @@
 		<link rel="stylesheet" type="text/css" href="gallery.css">
 		<link rel="stylesheet" type="text/css" href="engineerTech.css">
 		<link rel="stylesheet" type="text/css" href="404.css">
-		
-		<script type="text/javascript" src="jquery-3.4.1.min.js"></script>
-		<script type="text/javascript" src="common.js"></script>
-		<script type="text/javascript" src="projects.js"></script>
-		<script type="text/javascript" src="projectDetail.js"></script>
-		<script type="text/javascript" src="engineerTech.js"></script>
+		<link rel="stylesheet" type="text/css" href="article.css">
 		
 		<title>Home</title>
 	</head>
@@ -53,5 +48,16 @@
 		<div class="footer">
 			<span id="lang_footer">arthurvanstrien.nl versie 1, door Arthur van Strien</span><span>, </span><span id="year_footer">2019</span>
 		</div>
+		
+		<script type="text/javascript" src="jquery-3.4.1.min.js"></script>
+		<script type="text/javascript" src="common.js"></script>
+		<script type="text/javascript" src="projects.js"></script>
+		<script type="text/javascript" src="projectDetail.js"></script>
+		<script type="text/javascript" src="engineerTech.js"></script>
+		<script type="text/javascript" src="article.js"></script>
+		
+		<script language="javascript">
+			common.firstLoad();
+		</script>
 	</body>
 </html>
