Added the tools page to the website which uses the article page.

--- a/article.html
+++ b/article.html
@@ -4,6 +4,8 @@
 
 <span id="article-anchor"></span>
 
+<div id="externalFileContent"></div>
+
 <span class="contentOverflowStop"></span>
 
 <div class="bottomButton-container">
