--- a/index.html
+++ b/index.html
@@ -28,6 +28,7 @@
 					<span class="menuItem" id="lang_menuPhotography" onClick="common.changePage('photography')">Fotografie</span>
 					<span class="menuItem" id="lang_menuGallery" onClick="common.changePage('gallery')">Afbeeldingen Galerij</span>
 					<span class="menuItem" id="lang_menuEngineerTech" onClick="common.changePage('engineerTech')">Techniek en Informatica</span>
+					<span class="menuItem" id="lang_menuTools" onClick="common.changePage('tools')">Tools</span>
 					<span class="menuItem" id="lang_menuAboutme" onClick="common.changePage('aboutme')">Persoonlijk</span>
 				</div>
 				
