--- a/404.html
+++ b/404.html
@@ -4,7 +4,7 @@
 	
 	<p id="lang_paragraph-1"></p>
 	
-	<span id="homeButton" onClick="common.changePage('home')">Home</span>
+	<span class="button" onClick="common.changePage('home')">Home</span>
 	
 	<img src="pic_404/404.jpg" >
 </div>
