--- a/index.html
+++ b/index.html
@@ -15,6 +15,8 @@
 		<link rel="stylesheet" type="text/css" href="404.css">
 		<link rel="stylesheet" type="text/css" href="article.css">
 		
+		<link rel="icon" href="pic_common/logo_128.png">
+		
 		<title>Home</title>
 	</head>
 	
@@ -22,6 +24,8 @@
 		<div class="innerBody">
 			
 			<div class="menu">
+				<img id="menu_logo" onClick="common.changePage('home')" src="pic_common/logo_128.png" />
+				
 				<div class="menuItems">
 					<span class="menuItem" id="lang_menuHome" onClick="common.changePage('home')">Home</span>
 					<span class="menuItem" id="lang_menuProjects" onClick="common.changePage('projects')">Projecten</span>
