Added an easier way to update the website version.

--- a/index.html
+++ b/index.html
@@ -51,7 +51,10 @@
 		</div>
 
 		<div class="footer">
-			<span id="lang_footer">arthurvanstrien.nl versie 1, door Arthur van Strien</span><span>, </span><span id="year_footer">2019</span>
+			<span id="lang_footer-1">arthurvanstrien.nl versie</span><span> </span>
+			<span id="lang_version"></span><span>, </span>
+			<span id="lang_footer-2">door Arthur van Strien</span><span>, </span>
+			<span id="year_footer">2019</span>
 		</div>
 		
 		<script type="text/javascript" src="jquery-3.4.1.min.js"></script>
