Removed the pageTitle placeholder to stop glitching during load.

--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
 				</div>
 			</div>
 		
-			<h1 id="lang_pageTitle">Title</h1>
+			<h1 id="lang_pageTitle"></h1>
 			
 			<div class="content" id="content">
 				<p>Gelieve javascript in uw browser aan te zetten om gebruik te kunnen maken van deze website.</p>
